fix: change height of nav menu on mobile devices

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -37,7 +37,7 @@
   }
 
   .show {
-    height: 15rem;
+    height: 18rem;
   }
 
   ul {
